added float to table

--- a/exit-page.html
+++ b/exit-page.html
@@ -134,7 +134,7 @@ Patientenverfügung, Vorsorgevollmacht, Betreuungsverfügung</td>
             </tr> 
           </table>
 
-          <table class="block_no-margin-bottom table__summ table">
+          <table class="table__summ table">
             <tr class="tr">
               <td class="td td_bold">Gesamtsumme</td>
               <td class="td td_bold">148,00</td>
@@ -150,10 +150,39 @@ Patientenverfügung, Vorsorgevollmacht, Betreuungsverfügung</td>
           <h2 class="h2">Persönliche Angaben des Kontoinhabers (eingeloggte Person)</h2>
           <p class="text">Bitte überprüfen Sie Ihre Angaben auf Richtigkeit bzw. geben Sie Ihre Daten ein.</p>
           
-          <form class="form anrede">
+          <form class="anrede">
+          </form>
+            <div class="form">
+              <label class="form__label">Anrede*</label>
+              <input class="form__text" type="text">
+            </div>
+            <div>
+              <label>Titel</label>
+              <select>
+                <option>Option 1</option>
+                <option>Option 1</option>
+              </select>
+            </div>
+            <div>
+              <label for="">Vorname*</label>
+              <input type="text">
+            </div>
+            <div>
+              <label for="">Nachname*</label>
+              <input type="text">
+            </div>
+            <div>
+              <label for="">Straße und <br>Hausnummer*</label>
+              <input type="text">
+            </div>
+            <div>
+              <label for="">PLZ* und Ort*</label>
+              <input type="text">
+            </div>
           </form>
 
-          </form>
+
+
         </div>
       </section>
 
