--- a/exit-page.html
+++ b/exit-page.html
@@ -150,7 +150,7 @@ Patientenverfügung, Vorsorgevollmacht, Betreuungsverfügung</td>
           <h2 class="h2">Persönliche Angaben des Kontoinhabers (eingeloggte Person)</h2>
           <p class="text">Bitte überprüfen Sie Ihre Angaben auf Richtigkeit bzw. geben Sie Ihre Daten ein.</p>
           
-          <form class="anrede">
+          <!--<form class="anrede">
           </form>
             <div class="form">
               <label class="form__label">Anrede*</label>
@@ -179,7 +179,7 @@ Patientenverfügung, Vorsorgevollmacht, Betreuungsverfügung</td>
               <label for="">PLZ* und Ort*</label>
               <input type="text">
             </div>
-          </form>
+          </form>-->
 
 
 
