--- a/exit-page.html
+++ b/exit-page.html
@@ -148,38 +148,42 @@ Patientenverfügung, Vorsorgevollmacht, Betreuungsverfügung</td>
       <section class="personliche">
         <div class="content_width1200-centered section_padded">
           <h2 class="h2">Persönliche Angaben des Kontoinhabers (eingeloggte Person)</h2>
-          <p class="text">Bitte überprüfen Sie Ihre Angaben auf Richtigkeit bzw. geben Sie Ihre Daten ein.</p>
+          <p class="text block_margin-bottom50px">Bitte überprüfen Sie Ihre Angaben auf Richtigkeit bzw. geben Sie Ihre Daten ein.</p>
           
-          <!--<form class="anrede">
-          </form>
-            <div class="form">
-              <label class="form__label">Anrede*</label>
-              <input class="form__text" type="text">
+          <!--FORM-->
+
+          <form class="form form_width50per">
+            <div class="form__line">
+              <label class="form__label" for="anrede">Anrede*</label>
+              <input class="form__input" type="text">
             </div>
-            <div>
-              <label>Titel</label>
-              <select>
-                <option>Option 1</option>
-                <option>Option 1</option>
+            <div class="form__line">
+              <label class="form__label" for="titel">Titel</label>
+              <select class="form__input form__select">
+                <option class="form__option">Option 1</option>
+                <option class="form__option">Option 2</option>
               </select>
             </div>
-            <div>
-              <label for="">Vorname*</label>
-              <input type="text">
+            <div class="form__line">
+              <label class="form__label" for="vorname">Vorname*</label>
+              <input  class="form__input" type="text">
             </div>
-            <div>
-              <label for="">Nachname*</label>
-              <input type="text">
+            <div class="form__line">
+              <label class="form__label" for="nachname">Nachname*</label>
+              <input class="form__input" type="text">
             </div>
-            <div>
-              <label for="">Straße und <br>Hausnummer*</label>
-              <input type="text">
+            <div class="form__line">
+              <label class="form__label" for="straße und hausnummer">Straße und Hausnummer*</label>
+              <input class="form__input" type="text">
             </div>
-            <div>
-              <label for="">PLZ* und Ort*</label>
-              <input type="text">
+            <div class="form__line"> 
+              <label class="form__label" for="plz und ort">PLZ* und Ort*</label>
+              <input class="form__input" type="text">
             </div>
-          </form>-->
+            <p class="form__caption block_no-margin-bottom">Die mit dem * gekennzeichnten Felder müssen ausgefüllt werden.</p>
+          </form>
+
+          
 
 
 
