--- a/exit-page.html
+++ b/exit-page.html
@@ -41,21 +41,21 @@
           <div class="nav__element-short"></div>
           <div class="nav__element-short"></div>
           <div class="nav__element-long"></div>
-          <div class="nav__element-rect">
+          <div class="nav__rect-container">
             <div class="nav__rect nav_check"></div>
           </div>
           <div class="nav__element-short"></div>
           <div class="nav__element-short"></div>
           <div class="nav__element-short"></div>
           <div class="nav__element-long"></div>
-          <div class="nav__element-rect">
+          <div class="nav__rect-container">
             <div class="nav__rect nav_check"></div>
           </div>
           <div class="nav__element-short"></div>
           <div class="nav__element-short"></div>
           <div class="nav__element-short"></div>
           <div class="nav__element-long"></div> 
-          <div class="nav__element-rect">
+          <div class="nav__rect-container">
             <div class="nav__rect nav_file"></div>
           </div>
          </div>  
