added zusammenfasung section

--- a/exit-page.html
+++ b/exit-page.html
@@ -258,13 +258,16 @@
             </table>
             
             <div class="table-container">
-              <table class="table__summ table block_no-margin-bottom">
+              <table class="table__summ table">
                 <tr class="tr">
                   <td class="td td_bold">Gesamtsumme</td>
                   <td class="td td_bold">148,00</td>
                 </tr>
               </table>
           </div>
+
+          <div class="button">Zahlungspflichtig bestellen</div>
+          <p class="text block_no-margin-bottom">Ja, ich will meine Vorsorgedokumente jetzt erwerben.</p>
 
       </section>
 
