--- a/exit-page.html
+++ b/exit-page.html
@@ -268,8 +268,46 @@
         <button class="button">Zahlungspflichtig bestellen</button>
         <p class="text block_no-margin-bottom">Ja, ich will meine Vorsorgedokumente jetzt erwerben.</p>
       </section>
-
-      <footer>
+      <footer class="footer">
+        <div class="section_padded container;">
+          <div class="footer__container_flex">
+            <div class="footer__column-container">
+              <ul class-"list">
+                <li class="list__header">Mein Konto</li>
+                <li class="li">Übersicht</li>
+                <li class="li">Persönliche Daten</li>
+                <li class="li">Zugangsdaten</li>
+                <li class="li">Abmelden</li>
+              </ul>
+            </div>
+            <div class=footer__"column-container">
+              <ul class-"list">
+                <li class="list__header">Mein Konto</li>
+                <li class="li">Übersicht</li>
+                <li class="li">Persönliche Daten</li>
+                <li class="li">Zugangsdaten</li>
+                <li class="li">Abmelden</li>
+              </ul>
+            </div>
+            <div class="footer__column-container">
+              <ul class-"list">
+                <li class="list__header">Mein Konto</li>
+                <li class="li">Übersicht</li>
+                <li class="li">Persönliche Daten</li>
+                <li class="li">Zugangsdaten</li>
+                <li class="li">Abmelden</li>
+              </ul>
+            </div>
+            <div class="footer__column-container">
+              <ul class-"list">
+                <li class="list__header">Mein Konto</li>
+                <li class="li">Übersicht</li>
+                <li class="li">Persönliche Daten</li>
+                <li class="li">Zugangsdaten</li>
+                <li class="li">Abmelden</li>
+              </ul></div>   
+            </div>
+          </div>
       </footer>
     </div>
     
