added labels for checkboxes

--- a/exit-page.html
+++ b/exit-page.html
@@ -253,15 +253,15 @@
           Sie werden nach dem Bezahlvorgang automatisch auf diese Seite weitergeleitet.
         </p>
         <div class="checkbox">
-          <input class="checkbox__input" type="checkbox">
-          <span class="checkbox__title">Mir ist bekannt, dass ich die Dokumente auf Ihre Zweckeignung zu überprüfen sowie die 
-            richtige Verwendung sicherzustellen habe und die Plusrecht GmbH nicht vollumfänglich haftet.</span> 
+          <input id="jetzt-1" class="checkbox__input" type="checkbox">
+          <label for="jetzt-1" class="checkbox__title">Mir ist bekannt, dass ich die Dokumente auf Ihre Zweckeignung zu überprüfen sowie die 
+            richtige Verwendung sicherzustellen habe und die Plusrecht GmbH nicht vollumfänglich haftet.</label> 
         </div>
         <div class="checkbox block_margin-bottom50px">
-          <input class="checkbox__input" type="checkbox">
-          <span class="checkbox__title">Es gelten die Allgemeinen Geschäftsbedingungen. 
+          <input id="jetzt-2" class="checkbox__input" type="checkbox">
+          <label for="jetzt-2" class="checkbox__title">Es gelten die Allgemeinen Geschäftsbedingungen. 
             Mir ist bekannt, dass ein Widerrufsrecht nicht besteht, da die Dokumente eindeutig 
-            auf meine persönlichen Bedürfnisse zugeschnitten sind.</span> 
+            auf meine persönlichen Bedürfnisse zugeschnitten sind.</label> 
         </div>
 
         <h2 class="heading2">Zusammenfassung</h2>
