added comment section

--- a/exit-page.html
+++ b/exit-page.html
@@ -14,6 +14,7 @@
     <div class="general-layout">
       <header class="header">
         <div class="container container_flex">
+          
           <a class="logo logo_large" href="">
             <img src="images/logo.png" alt="logo">
           </a>
@@ -29,6 +30,7 @@
               <img class="header__triangle" src="images/triangle.svg" alt="triangle">
             </div>
           </div>
+        
         </div>
       </header>
 
@@ -145,10 +147,12 @@
             </div>
             <div class="form__line">
               <label class="form__label" for="titel">Titel</label>
-              <select class="form__input form__select">
-                <option class="form__option">Option 1</option>
-                <option class="form__option">Option 2</option>
-              </select>
+              <div class="form__input">
+                <select class="form__select">
+                  <option class="form__option">Option 1</option>
+                  <option class="form__option">Option 2</option>
+                </select>
+              </div>
             </div>
             <div class="form__line">
               <label class="form__label" for="vorname">Vorname*</label>
