--- a/exit-page.html
+++ b/exit-page.html
@@ -29,26 +29,26 @@
 
       <div class="container">
         <nav class="nav">
-          <div class="nav__element-short"></div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-long"></div>
-          <div class="nav__rect-container">
-            <div class="nav__rect nav_check"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__rect">
+            <div class="nav__icon nav__icon_check"></div>
           </div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-long"></div>
-          <div class="nav__rect-container">
-            <div class="nav__rect nav_check"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__rect">
+            <div class="nav__icon nav__icon_check"></div>
           </div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-short"></div>
-          <div class="nav__element-long"></div> 
-          <div class="nav__rect-container">
-            <div class="nav__rect nav_file"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div>
+          <div class="nav__element"></div> 
+          <div class="nav__rect">
+            <div class="nav__icon nav__icon_file"></div>
           </div>
         </nav>
       </div>  
