removed margin-btm-0

--- a/exit-page.html
+++ b/exit-page.html
@@ -295,7 +295,7 @@
             </table>
         </div>
         <button class="button">Zahlungspflichtig bestellen</button>
-        <p class="text section_margin-bt10px">Ja, ich will meine Vorsorgedokumente jetzt erwerben.</p>
+        <p class="section__paragraph">Ja, ich will meine Vorsorgedokumente jetzt erwerben.</p>
       </section>
       <footer class="footer">
         <div class="section container">
