fixed footer classes naming

--- a/exit-page.html
+++ b/exit-page.html
@@ -301,39 +301,39 @@
         <div class="section container">
           <div class="footer__container_flex">
             <div class="footer__column">
-              <ul class-"list">
-                <li class="list__header">Mein Konto</li>
-                <li class="li">Übersicht</li>
-                <li class="li">Persönliche Daten</li>
-                <li class="li">Zugangsdaten</li>
-                <li class="li">Abmelden</li>
+              <ul class="footer__list">
+                <li class="footer__list-title">Mein Konto</li>
+                <li class="footer__list-item">Übersicht</li>
+                <li class="footer__list-item">Persönliche Daten</li>
+                <li class="footer__list-item">Zugangsdaten</li>
+                <li class="footer__list-item">Abmelden</li>
               </ul>
             </div>
             <div class="footer__column">
-              <ul class-"list">
-                <li class="list__header">Ratgeber</li>
-                <li class="li">Dokument erklärt</li>
-                <li class="li">Häufige Missverständisse</li>
-                <li class="li">Dokument aufbewahren</li>
-                <li class="li">Beispiel-Fälle</li>
+              <ul class="footer__list">
+                <li class="footer__list-title">Ratgeber</li>
+                <li class="footer__list-item">Dokument erklärt</li>
+                <li class="footer__list-item">Häufige Missverständisse</li>
+                <li class="footer__list-item">Dokument aufbewahren</li>
+                <li class="footer__list-item">Beispiel-Fälle</li>
               </ul>
             </div>
             <div class="footer__column">
-              <ul class-"list">
-                <li class="list__header">Rechtliches</li>
-                <li class="li">Impressum</li>
-                <li class="li">Datenschutz</li>
-                <li class="li">Widerrufsrecht</li>
-                <li class="li">AGB</li>
+              <ul class="footer__list">
+                <li class="footer__list-title">Rechtliches</li>
+                <li class="footer__list-item">Impressum</li>
+                <li class="footer__list-item">Datenschutz</li>
+                <li class="footer__list-item">Widerrufsrecht</li>
+                <li class="footer__list-item">AGB</li>
               </ul>
             </div>
             <div class="footer__column">
-              <ul class-"list">
-                <li class="list__header">Sicher bezahlen</li>
-                <li class="li">Kundeninformation</li>
-                <li class="li"><img class="img-payment" src="images/mastercard.png" alt="mastercard"></li>
-                <li class="li"><img class="img-payment" src="images/sofort.png" alt="sofort"></li>
-                <li class="li"><img class="img-payment" src="images/paypal.png" alt="paypal"></li>
+              <ul class-"footer__list">
+                <li class="footer__list-title">Sicher bezahlen</li>
+                <li class="footer__list-item">Kundeninformation</li>
+                <li class="footer__list-item"><img class="img-payment" src="images/mastercard.png" alt="mastercard"></li>
+                <li class="footer__list-item"><img class="img-payment" src="images/sofort.png" alt="sofort"></li>
+                <li class="footer__list-item"><img class="img-payment" src="images/paypal.png" alt="paypal"></li>
               </ul>
             </div>
           </div>
