fixed margin helper

--- a/exit-page.html
+++ b/exit-page.html
@@ -140,7 +140,7 @@
 
       <section class="personliche section">
         <h2 class="heading2">Persönliche Angaben des Kontoinhabers (eingeloggte Person)</h2>
-        <p class="section__paragraph section_margin-bottom50px">Bitte überprüfen Sie Ihre Angaben auf Richtigkeit bzw. geben Sie Ihre Daten ein.</p>
+        <p class="section__paragraph margin-bottom50px">Bitte überprüfen Sie Ihre Angaben auf Richtigkeit bzw. geben Sie Ihre Daten ein.</p>
         
         <form class="form">
           <div class="form__line">
@@ -268,7 +268,7 @@
           Sie werden nach dem Bezahlvorgang automatisch auf diese Seite weitergeleitet.
         </p>
 
-        <div class="checkbox-container">
+        <div class="checkbox-container margin-bottom50px">
           <div class="checkbox-item">
             <input id="jetzt-1" class="checkbox__input" type="checkbox">
             <label for="jetzt-1" class="checkbox__title">Mir ist bekannt, dass ich die Dokumente auf Ihre Zweckeignung zu überprüfen sowie die 
