fixed footer list class

--- a/exit-page.html
+++ b/exit-page.html
@@ -345,7 +345,7 @@
             </ul>
           </div>
           <div class="footer__column">
-            <ul class-"footer__list">
+            <ul class="footer__list">
               <li class="footer__list-title">Sicher bezahlen</li>
               <li class="footer__list-item">Kundeninformation</li>
               <li class="footer__list-item"><img class="img-payment" src="images/mastercard.png" alt="mastercard"></li>
