--- a/exit-page.html
+++ b/exit-page.html
@@ -190,7 +190,7 @@
             <div class="radio__title">
               <label class="radio__title_sofort">Sofortüberweisung</label>
               <img class="img-payment" src="images/sofort.png" alt="sofort">
-              <p class="text_14">Mit PIN &amp; TAN einfach und sicher mit den gewohnten<br> 
+              <p class="radio__info">Mit PIN &amp; TAN einfach und sicher mit den gewohnten<br> 
                 Online-Banking-Daten zahlen </p>
             </div>  
           </div>                
@@ -200,7 +200,7 @@
             <div class="radio__title">
               <label class="radio__title_paypal">PayPal</label>
               <img class="img-payment" src="images/paypal.png" alt="paypal">
-              <p class="text_14">Einfach und sicher mit Payal bezahlen</p>
+              <p class="radio__info">Einfach und sicher mit Payal bezahlen</p>
             </div>
           </div>
           
@@ -209,7 +209,7 @@
             <div class="radio__title">
               <label class="radio__title_kreditcard">Kreditkarte</label>
               <img class="img-payment" src="images/mastercard.png" alt="mastercard">
-              <p class="text_14">Zahlen Sie mit Visa oder Mastercard</p>
+              <p class="radio__info">Zahlen Sie mit Visa oder Mastercard</p>
             </div>
           </div>  
 
