--- a/exit-page.html
+++ b/exit-page.html
@@ -32,6 +32,7 @@
         <div class="nav__element"></div>
         <div class="nav__element"></div>
         <div class="nav__element"></div>
+        <div class="nav__element"></div>
         <div class="nav__rect">
           <div class="nav__icon nav__icon_check"></div>
         </div>
@@ -190,16 +191,18 @@
             <div class="radio__title">
               <label class="radio__title_sofort">Sofortüberweisung</label>
               <img class="img-payment" src="images/sofort.png" alt="sofort">
-              <p class="radio__info">Mit PIN &amp; TAN einfach und sicher mit den gewohnten<br> 
-                Online-Banking-Daten zahlen </p>
             </div>  
+            <p class="radio__info">Mit PIN &amp; TAN einfach und sicher mit den gewohnten<br> 
+              Online-Banking-Daten zahlen </p>
           </div>                
           
           <div class="radio-item">
             <input class="radio__input" name="radio-payment" type="radio">
-            <div class="radio__title">
-              <label class="radio__title_paypal">PayPal</label>
-              <img class="img-payment" src="images/paypal.png" alt="paypal">
+            <div class="radio__label">
+              <div class="radio__title">
+                <label class="radio__title_paypal">PayPal</label>
+                <img class="img-payment" src="images/paypal.png" alt="paypal">
+              </div>
               <p class="radio__info">Einfach und sicher mit Payal bezahlen</p>
             </div>
           </div>
@@ -209,8 +212,8 @@
             <div class="radio__title">
               <label class="radio__title_kreditcard">Kreditkarte</label>
               <img class="img-payment" src="images/mastercard.png" alt="mastercard">
-              <p class="radio__info">Zahlen Sie mit Visa oder Mastercard</p>
             </div>
+            <p class="radio__info">Zahlen Sie mit Visa oder Mastercard</p>
           </div>  
 
         </div>
